Fixed: Align Dashboard sidebar icons.

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -81,6 +81,6 @@
 }
 
 i{
-    height: 15px;
+    /* height: 15px; */
     width: 15px;
 }
